--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,7 @@
   --primary: #ffd700;
   --secondary: #a020f0;
   --gray: #71717a;
-  --black: #18181b;
+  --black: #000000;
   --black_text: #000000d9;
   --white: #ffffff;
   --shadow-color: rgba(0, 0, 0, 0.6);
